--- a/6310742181/resources/sass/app.scss
+++ b/6310742181/resources/sass/app.scss
@@ -5,4 +5,5 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
+@import '~mdb-ui-kit/src/scss/mdb.free';
