--- a/6310742181/resources/sass/app.scss
+++ b/6310742181/resources/sass/app.scss
@@ -1,8 +1,8 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Kanit:300,400,500&display=swap');
 
 // Variables
-@import 'variables';
+//@import 'variables';
 
 // Bootstrap
 //@import '~bootstrap/scss/bootstrap';
