--- a/6310742181/resources/css/app.css
+++ b/6310742181/resources/css/app.css
@@ -15,15 +15,15 @@ body {
 .navbar .nav-item a {
     font-size: 15px;
 }
-.navbar > .container-fluid > .social-button > a {
+.navbar .social-button > a, .navbar .social-button-md > a {
     color: rgba(255, 255, 255, 0.55);
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     padding-left: 2px;
 }
-.navbar > .container-fluid > .social-button > a:hover {
+.navbar .social-button > a:hover, .navbar .social-button-md > a:hover {
     color: rgba(255, 255, 255, 0.75);
 }
-.navbar > .container-fluid > .social-button > a > i {
+.navbar .social-button > a > i, .navbar .social-button-md > a > i {
     padding: 0.25rem 0;
     font-size: 1.25rem;
 }
@@ -48,12 +48,18 @@ body {
 .navbar a, .navbar a:focus {
     position: relative;
 }
+.navbar .social-button-md {
+    display: none;
+}
 @media screen and (min-width: 768px) {
     .nav-portfolio {
         height: 50px;
     }
     .navbar .social-button {
         display: none;
+    }
+    .navbar .social-button-md {
+        display: block;
     }
     .navbar a:hover:before, .navbar .active:before {
         width: calc(100% - 1rem) !important;
