--- a/6310742181/resources/css/app.css
+++ b/6310742181/resources/css/app.css
@@ -1,70 +1,3 @@
 body {
-    font-family: Kanit,sans-serif;
-}
-.nav-portfolio {
-    background-color: #0d0d0d;
-    min-height: 50px;
-}
-.navbar .logo a {
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 300;
-    letter-spacing: 2px;
-    color: rgba(255, 255, 255, 0.75);
-}
-.navbar .nav-item a {
-    font-size: 15px;
-}
-.navbar .social-button > a, .navbar .social-button-md > a {
-    color: rgba(255, 255, 255, 0.55);
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-    padding-left: 2px;
-}
-.navbar .social-button > a:hover, .navbar .social-button-md > a:hover {
-    color: rgba(255, 255, 255, 0.75);
-}
-.navbar .social-button > a > i, .navbar .social-button-md > a > i {
-    padding: 0.25rem 0;
-    font-size: 1.25rem;
-}
-.navbar a:hover:before, .navbar .active:before {
-    visibility: visible !important;
-    width: 40px !important;
-}
-.navbar .navbar-nav > .nav-item > a:before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 2px;
-    bottom: 4px;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.75);
-    visibility: hidden;
-    transition: all 0.3s ease-in-out 0s;
-}
-.navbar .navbar-nav > .nav-item > .active:before {
-    background-color: #fff !important;
-}
-.navbar a, .navbar a:focus {
-    position: relative;
-}
-.navbar .social-button-md {
-    display: none;
-}
-@media screen and (min-width: 768px) {
-    .nav-portfolio {
-        height: 50px;
-    }
-    .navbar .social-button {
-        display: none;
-    }
-    .navbar .social-button-md {
-        display: block;
-    }
-    .navbar a:hover:before, .navbar .active:before {
-        width: calc(100% - 1rem) !important;
-    }
-    .navbar .navbar-nav > .nav-item > a:before {
-        left: 8px;
-    }
+    font-family: Kanit,sans-serif !important;
 }
