--- a/6310742181/resources/sass/app.scss
+++ b/6310742181/resources/sass/app.scss
@@ -24,6 +24,9 @@
 // About
 @import '../css/about.css';
 
+// Portfolio
+@import '../css/portfolio.css';
+
 // Contact
 @import '../css/contact.css';
 
