--- a/6310742843/resources/sass/app.scss
+++ b/6310742843/resources/sass/app.scss
@@ -12,3 +12,15 @@
 @import '~bootstrap/scss/bootstrap';
 
 
+// CSS Files
+// Global
+@import '../css/app.css';
+
+// Navbar
+@import '../css/navbar.css';
+
+// Admin
+@import '../css/admin.css';
+
+
+
